--- a/public/css/app.css
+++ b/public/css/app.css
@@ -36,3 +36,54 @@ header nav a:hover {
   color: #002d75;
 }
 
+.prodotti {
+  background-image: url("/img/fondo-pag-speciali.jpg");
+}
+
+.prodotti h2 {
+  padding: 30px 0;
+  font-size: 2rem;
+}
+
+.prodotti .container {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.prodotti .container .pasta {
+  width: calc(100% / 3 - 80px);
+  margin: 40px;
+  padding: 10px;
+  overflow: hidden;
+  position: relative;
+}
+
+.prodotti .container .pasta img.pasta-img {
+  width: 100%;
+}
+
+.prodotti .container .pasta .overlay {
+  width: 100%;
+  height: 100%;
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.prodotti .container .pasta .overlay img.icon {
+  width: 80px;
+}
+
+.prodotti .container .pasta:hover img.pasta-img {
+  transform: scale(1.2);
+}
+
+.prodotti .container .pasta:hover .overlay {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
