--- a/public/css/app.css
+++ b/public/css/app.css
@@ -43,6 +43,7 @@ header nav a:hover {
 .prodotti h2 {
   padding: 30px 0;
   font-size: 2rem;
+  text-shadow: 2px 2px white;
 }
 
 .prodotti .container {
