Aggiunta classe active per i link attivi
La classe active viene assegnata all'opportuno tag a tramite javascript, in base al  pathname di window.location

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -36,6 +36,11 @@ header nav a:hover {
   color: #002d75;
 }
 
+header nav a.active {
+  color: #002d75;
+  border-bottom: 4px solid #002d75;
+}
+
 .prodotti {
   background-image: url("/img/fondo-pag-speciali.jpg");
 }
