--- a/resources/sass/partials/_common.scss
+++ b/resources/sass/partials/_common.scss
@@ -34,5 +34,10 @@ header{
                 color: $link_active_color;
             }
         }
+
+        a.active{
+            color: $link_active_color;
+            border-bottom: 4px solid $link_active_color;
+        }
     }
 }
