--- a/resources/sass/partials/_prodotti.scss
+++ b/resources/sass/partials/_prodotti.scss
@@ -21,6 +21,7 @@
 
             img.pasta-img{
                 width: 100%;
+                transition: transform 0.4s linear;
             }
 
             .overlay{
