--- a/public/css/app.css
+++ b/public/css/app.css
@@ -162,3 +162,66 @@ header nav a.active {
   text-align: center;
 }
 
+footer {
+  padding-top: 60px;
+  background-color: white;
+}
+
+footer .container {
+  max-width: 1170px;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+footer .footer-logo img {
+  width: 90%;
+}
+
+footer .col {
+  width: calc(100% / 4);
+}
+
+footer h3 {
+  padding: 20px 0;
+  color: #002d75;
+}
+
+footer ul {
+  list-style: none;
+}
+
+footer ul li {
+  padding: 8px 0;
+  color: lightgrey;
+}
+
+footer ul li a {
+  text-decoration: none;
+  font-size: 16px;
+  color: lightgrey;
+}
+
+footer ul.info {
+  padding: 20px 0;
+}
+
+footer ul.info li {
+  font-size: 12px;
+}
+
+footer ul.info li strong {
+  color: grey;
+}
+
+@media screen and (max-width: 680px) {
+  footer .col {
+    width: 100%;
+    text-align: center;
+  }
+
+  footer .footer-logo img {
+    width: 200px;
+  }
+}
+
