--- a/public/css/app.css
+++ b/public/css/app.css
@@ -225,3 +225,36 @@ footer ul.info li strong {
   }
 }
 
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 2px 0;
+}
+
+.row .col {
+  width: calc(100% / 3);
+  padding: 0 2px;
+  overflow: hidden;
+}
+
+.row .col img {
+  width: 100%;
+  transition: transform 2s linear;
+}
+
+.row .col:hover img {
+  transform: scale(1.3);
+}
+
+@media screen and (min-width: 601px) and (max-width: 860px) {
+  .row .col {
+    width: calc(100% / 2);
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .row .col {
+    width: 100%;
+  }
+}
+
